package models;

message PlansItProto{
  required string GoogleId = 1;
  required string Email = 2;
  optional string Name = 3;
  repeated Trip Trips = 4;


message Trip{
	  required string Id = 1;
	  optional string Name = 2;
	  optional string DateCreated = 3; 
	  optional string Departure = 4;
	  optional string Description = 5;
	  optional string Length =6;
	  repeated Place Places = 7;
}

message Place {
	optional string PlaceId = 1;
	optional string Notes = 2; 
	repeated Category Categories = 3;
}

message Category{
	optional string Name = 1; 
	optional string Description = 2;
}

}